--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "first-app",
-    "slug": "first-app",
+    "name": "timelapsr",
+    "slug": "timelapsr",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
@@ -13,7 +13,7 @@
       "infoPlist": {
         "NSCameraUsageDescription": "$(PRODUCT_NAME) needs access to your Camera."
       },
-      "bundleIdentifier": "com.anonymous.firstapp"
+      "bundleIdentifier": "com.anonymous.timelapsr"
     },
     "android": {
       "adaptiveIcon": {
@@ -24,7 +24,7 @@
         "android.permission.CAMERA",
         "android.permission.RECORD_AUDIO"
       ],
-      "package": "com.anonymous.firstapp"
+      "package": "com.anonymous.timelapsr"
     },
     "web": {
       "bundler": "metro",
