--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "expo": "~52.0.25",
@@ -28,6 +29,7 @@
     "expo-linking": "~7.0.4",
     "expo-router": "~4.0.16",
     "expo-splash-screen": "~0.29.20",
+    "expo-sqlite": "~15.0.6",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.1",
     "expo-system-ui": "~4.0.7",
@@ -38,13 +40,14 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-image-filter-kit": "^0.8.0",
     "react-native-modal": "^13.0.1",
+    "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-select-dropdown": "^4.0.1",
     "react-native-vision-camera": "^4.6.3",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
-    "expo-sqlite": "~15.0.6"
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
