--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
@@ -41,6 +42,7 @@
     "react-native-image-filter-kit": "^0.8.0",
     "react-native-modal": "^13.0.1",
     "react-native-picker-select": "^9.3.1",
+    "react-native-popup-menu": "^0.16.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
