--- a/app.json
+++ b/app.json
@@ -48,7 +48,8 @@
           "cameraPermission": "Allow $(PRODUCT_NAME) to access your camera"
         }
       ],
-      "expo-sqlite"
+      "expo-sqlite",
+      "@config-plugins/ffmpeg-kit-react-native"
     ],
     "experiments": {
       "typedRoutes": true
